# benchpublic

./: .gitignore  CONTRIBUTING.md  INTERPACKAGE.md  LICENSE  NOTICE  README.md  pyproject.toml  turbo.json
.github/workflows/: ci.yml
apps/cli/: pyproject.toml
apps/cli/src/benchpublic_cli/: main.py
apps/docs/: DECISIONS.md
apps/docs/methodology/: v3.md
apps/mcp/data/: retrieval.json
apps/mcp/lib/: leaderboard.ts
apps/mcp/test/: leaderboard.test.ts
docker/: Dockerfile.base
golden-sets-public/: CANARY  LICENSE-DATA  README.md
golden-sets-public/chunking/: README.md
golden-sets-public/crawl/: README.md
golden-sets-public/extraction/: README.md  dev.example.jsonl  dev.jsonl
golden-sets-public/ocr/: README.md
golden-sets-public/reranker/: README.md
golden-sets-public/retrieval/: README.md
golden-sets-public/sentinel/: PROTOCOL.md
golden-sets-public/vectordb/: README.md
golden-sets-public/websearch/: README.md  dev.example.jsonl
