[project]
name = "benchpublic-cli"
version = "0.1.0"
description = "The `benchpublic` CLI: init / run / view / submit."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["bench-schemas", "bench-core", "bench-stats", "bench-adapters", "typer>=0.12"]

[project.scripts]
benchpublic = "benchpublic_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchpublic_cli"]
